--- a/analysis/immo_analysis.ipynb
+++ b/analysis/immo_analysis.ipynb
@@ -290,12 +290,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T09:52:19.041223Z",
-     "start_time": "2024-03-01T09:52:19.038939Z"
+     "end_time": "2024-03-01T12:31:41.920521Z",
+     "start_time": "2024-03-01T12:31:41.917806Z"
     }
    },
    "id": "48efe611a7b8f83b",
-   "execution_count": 64
+   "execution_count": 121
   },
   {
    "cell_type": "code",
@@ -305,7 +305,7 @@
       "text/plain": "    Price  Postal Code Build Year  Facades  Habitable Surface  Land Surface  \\\n0  220000         4300       1974      3.0              115.0           NaN   \n1  339000         9230       2015      3.0              134.0           NaN   \n2  495000         1050       1958      2.0              134.0           NaN   \n3  175000         2600       1968      2.0               90.0           NaN   \n4  289000         1090       1965      2.0               80.0           NaN   \n\n        Type    Subtype  Bedroom Count  Bathroom Count  Toilet Count  \\\n0  APARTMENT  APARTMENT            3.0             1.0           2.0   \n1  APARTMENT     DUPLEX            3.0             1.0           2.0   \n2  APARTMENT  APARTMENT            2.0             1.0           2.0   \n3  APARTMENT  APARTMENT            2.0             1.0           1.0   \n4  APARTMENT  APARTMENT            3.0             1.0           1.0   \n\n   Room Count  Kitchen Surface  Furnished  Living Surface  \n0         6.0             10.0      False            34.0  \n1         6.0              NaN      False            30.0  \n2         5.0              8.0      False            40.0  \n3         4.0              9.0      False            37.0  \n4         5.0              9.0      False            30.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Price</th>\n      <th>Postal Code</th>\n      <th>Build Year</th>\n      <th>Facades</th>\n      <th>Habitable Surface</th>\n      <th>Land Surface</th>\n      <th>Type</th>\n      <th>Subtype</th>\n      <th>Bedroom Count</th>\n      <th>Bathroom Count</th>\n      <th>Toilet Count</th>\n      <th>Room Count</th>\n      <th>Kitchen Surface</th>\n      <th>Furnished</th>\n      <th>Living Surface</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>220000</td>\n      <td>4300</td>\n      <td>1974</td>\n      <td>3.0</td>\n      <td>115.0</td>\n      <td>NaN</td>\n      <td>APARTMENT</td>\n      <td>APARTMENT</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>False</td>\n      <td>34.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>339000</td>\n      <td>9230</td>\n      <td>2015</td>\n      <td>3.0</td>\n      <td>134.0</td>\n      <td>NaN</td>\n      <td>APARTMENT</td>\n      <td>DUPLEX</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>6.0</td>\n      <td>NaN</td>\n      <td>False</td>\n      <td>30.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>495000</td>\n      <td>1050</td>\n      <td>1958</td>\n      <td>2.0</td>\n      <td>134.0</td>\n      <td>NaN</td>\n      <td>APARTMENT</td>\n      <td>APARTMENT</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>5.0</td>\n      <td>8.0</td>\n      <td>False</td>\n      <td>40.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>175000</td>\n      <td>2600</td>\n      <td>1968</td>\n      <td>2.0</td>\n      <td>90.0</td>\n      <td>NaN</td>\n      <td>APARTMENT</td>\n      <td>APARTMENT</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>9.0</td>\n      <td>False</td>\n      <td>37.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>289000</td>\n      <td>1090</td>\n      <td>1965</td>\n      <td>2.0</td>\n      <td>80.0</td>\n      <td>NaN</td>\n      <td>APARTMENT</td>\n      <td>APARTMENT</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>9.0</td>\n      <td>False</td>\n      <td>30.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 65,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,12 +318,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T09:52:19.651595Z",
-     "start_time": "2024-03-01T09:52:19.635279Z"
+     "end_time": "2024-03-01T12:31:43.009526Z",
+     "start_time": "2024-03-01T12:31:42.998024Z"
     }
    },
    "id": "37a8324642e52b2e",
-   "execution_count": 65
+   "execution_count": 122
   },
   {
    "cell_type": "code",
@@ -332,7 +332,7 @@
      "data": {
       "text/plain": "(12388, 15)"
      },
-     "execution_count": 69,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,12 +343,219 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T09:55:30.468125Z",
-     "start_time": "2024-03-01T09:55:30.464848Z"
+     "end_time": "2024-03-01T12:31:48.589105Z",
+     "start_time": "2024-03-01T12:31:48.585780Z"
     }
    },
    "id": "f7dd6e5afcf9e057",
-   "execution_count": 69
+   "execution_count": 123
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Price                False\nPostal Code          False\nBuild Year            True\nFacades               True\nHabitable Surface     True\nLand Surface          True\nType                 False\nSubtype              False\nBedroom Count         True\nBathroom Count        True\nToilet Count          True\nRoom Count            True\nKitchen Surface       True\nFurnished            False\nLiving Surface        True\ndtype: bool"
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "immo_extracted.isnull().any()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:31:49.682370Z",
+     "start_time": "2024-03-01T12:31:49.677136Z"
+    }
+   },
+   "id": "653c8295daa3bca6",
+   "execution_count": 124
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Price                0.000000\nPostal Code          0.000000\nBuild Year           0.254924\nFacades              0.251614\nHabitable Surface    0.031644\nLand Surface         0.663545\nType                 0.000000\nSubtype              0.000000\nBedroom Count        0.006942\nBathroom Count       0.119793\nToilet Count         0.218922\nRoom Count           0.011866\nKitchen Surface      0.670810\nFurnished            0.000000\nLiving Surface       0.511786\ndtype: float64"
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "immo_extracted.isnull().mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:32:17.142635Z",
+     "start_time": "2024-03-01T12:32:17.137099Z"
+    }
+   },
+   "id": "cba5c981f138e57d",
+   "execution_count": 125
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "12388"
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "immo_extracted['Living Surface'].isnull().count()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:54:43.689562Z",
+     "start_time": "2024-03-01T12:54:43.686564Z"
+    }
+   },
+   "id": "58ebc75dacc2df4e",
+   "execution_count": 132
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0           NaN\n1           NaN\n2           NaN\n3           NaN\n4           NaN\n          ...  \n12383    1040.0\n12384     923.0\n12385       NaN\n12386    1778.0\n12387       NaN\nName: Land Surface, Length: 12388, dtype: float64"
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = immo_extracted.groupby(['Postal Code', 'Type', 'Bedroom Count'])['Land Surface'].bfill()\n",
+    "grouped"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:45:37.138966Z",
+     "start_time": "2024-03-01T12:45:37.132895Z"
+    }
+   },
+   "id": "e697e5a7432dd5d7",
+   "execution_count": 129
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        34.0\n",
+      "1        30.0\n",
+      "2        40.0\n",
+      "3        35.0\n",
+      "4        30.0\n",
+      "         ... \n",
+      "12383     NaN\n",
+      "12384    30.0\n",
+      "12385     NaN\n",
+      "12386    16.0\n",
+      "12387    42.0\n",
+      "Name: Living Surface, Length: 12388, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_75036/2802458539.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  immo_extracted['Living Surface Imputed'] = immo_extracted['Living Surface'].fillna(median_land_surface)\n",
+      "/tmp/ipykernel_75036/2802458539.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  immo_extracted['Living Surface'] = immo_extracted['Living Surface Imputed'].fillna(immo_extracted['Living Surface'])\n",
+      "/tmp/ipykernel_75036/2802458539.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  immo_extracted.drop(columns=['Living Surface Imputed'], inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Price                0.000000\nPostal Code          0.000000\nBuild Year           0.254924\nFacades              0.251614\nHabitable Surface    0.031644\nLand Surface         0.663545\nType                 0.000000\nSubtype              0.000000\nBedroom Count        0.006942\nBathroom Count       0.119793\nToilet Count         0.218922\nRoom Count           0.011866\nKitchen Surface      0.670810\nFurnished            0.000000\nLiving Surface       0.232887\ndtype: float64"
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Impute null values taking postal code and price into consideration\n",
+    "\n",
+    "# Grouping by Postal Code and Type\n",
+    "grouped = immo_extracted.groupby(['Postal Code', 'Type', 'Bedroom Count'])\n",
+    "\n",
+    "# Calculate the most common value of 'Land Surface' within each group.\n",
+    "median_land_surface = grouped['Living Surface'].transform('median')\n",
+    "print(median_land_surface)\n",
+    "\n",
+    "immo_extracted['Living Surface Imputed'] = immo_extracted['Living Surface'].fillna(median_land_surface)\n",
+    "\n",
+    "immo_extracted['Living Surface'] = immo_extracted['Living Surface Imputed'].fillna(immo_extracted['Living Surface'])\n",
+    "\n",
+    "immo_extracted.drop(columns=['Living Surface Imputed'], inplace=True)\n",
+    "\n",
+    "immo_extracted.isnull().mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:47:09.291510Z",
+     "start_time": "2024-03-01T12:47:09.280146Z"
+    }
+   },
+   "id": "73328c6fd67b1b18",
+   "execution_count": 130
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Price                0.000000\nPostal Code          0.000000\nBuild Year           0.254924\nFacades              0.251614\nHabitable Surface    0.031644\nLand Surface         0.663545\nType                 0.000000\nSubtype              0.000000\nBedroom Count        0.006942\nBathroom Count       0.119793\nToilet Count         0.218922\nRoom Count           0.011866\nKitchen Surface      0.670810\nFurnished            0.000000\nLiving Surface       0.511786\ndtype: float64"
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "immo_extracted.isnull().mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T12:23:42.987274Z",
+     "start_time": "2024-03-01T12:23:42.982088Z"
+    }
+   },
+   "id": "431a44b6bd637b9a",
+   "execution_count": 112
   },
   {
    "cell_type": "code",
@@ -504,25 +711,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Price Null Count: 12388\n",
       "Price mean: 410268.4679528576\n",
-      "Outliers Price mean: 1193198.4776422763\n",
-      "Outliers Count: \n",
-      "Price                984\n",
-      "Postal Code          984\n",
-      "Build Year           785\n",
-      "Facades              808\n",
-      "Habitable Surface    966\n",
-      "Land Surface         460\n",
-      "Type                 984\n",
-      "Subtype              984\n",
-      "Bedroom Count        982\n",
-      "Bathroom Count       928\n",
-      "Toilet Count         833\n",
-      "Room Count           976\n",
-      "Kitchen Surface      385\n",
-      "Furnished            984\n",
-      "Living Surface       546\n",
-      "dtype: int64\n"
+      "Outliers Price mean: 1193198.4776422763\n"
      ]
     }
    ],
@@ -543,20 +734,21 @@
     "values_inside_IQR = immo_extracted[(immo_extracted['Price'] >= lower_limit) & (immo_extracted['Price'] <= upper_limit)].shape[0]\n",
     "quantity_outliers = outliers.shape[0]\n",
     "\n",
+    "print(f\"Price Null Count: {immo_extracted['Price'].count()}\")\n",
     "print(f\"Price mean: {immo_extracted['Price'].mean()}\")\n",
     "print(f\"Outliers Price mean: {outliers['Price'].mean()}\")\n",
     "\n",
-    "print(f\"Outliers Count: \\n{outliers.count()}\")"
+    "# print(f\"Outliers Count: \\n{outliers.count()}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T10:07:50.830761Z",
-     "start_time": "2024-03-01T10:07:50.823002Z"
+     "end_time": "2024-03-01T12:58:17.798207Z",
+     "start_time": "2024-03-01T12:58:17.790462Z"
     }
    },
    "id": "8d35b11fd6944225",
-   "execution_count": 82
+   "execution_count": 136
   },
   {
    "cell_type": "code",
