biomodal distribution and average features

--- a/analysis/immo_house_apartment_analysis_new_data.ipynb
+++ b/analysis/immo_house_apartment_analysis_new_data.ipynb
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 'Price' and 'Sea view' are not correlatet at all\n",
+    "# 'Price' and 'Sea view' are not correlated at all\n",
     "\n",
     "** we will not use it ** "
    ],
